Standardizing %transition-* components; Adding animate-on and move-on mixins; Renaming $state-* to $visibility-*; Adding on mixin for states;

--- a/docs/views/layout.html
+++ b/docs/views/layout.html
@@ -160,7 +160,7 @@
                         <span class="subtext">(2)</span>
                     </div>
                 </div>
-                <div class="col-9 content">
+                <div class="col-9 content foo">
                     <span class="strong">Virgin America</span>
                     <div class="scroll-x">                    
                         <div class="card-inline">
