--- a/scss/modules/states/_module.scss
+++ b/scss/modules/states/_module.scss
@@ -3,7 +3,7 @@
 // =============
 
 // State Settings
-$state-mqs: (all, small, medium, large, short, tall);
+$visibility-mqs: (all, small, medium, large, short, tall);
 
 // Imports
 @import
