--- a/docs/views/animations.html
+++ b/docs/views/animations.html
@@ -1,24 +1,43 @@
 <h1>Animations Module</h1>
 
-<nav class="horizontal">
-    <ul>
-        <li ng-repeat="page in ['primary','secondary','light','dark']"><a ng-click="component.animations.page = page">{{page}}</a></li>
-    </ul>
-</nav>
-<div class="field">
-    <input type="checkbox" name="" id="" ng-model="component.animations.delay" value="1">
-    <label for="">Delay</label>
-</div>
-<div class="field">
-    <select name="component.animations.type" ng-model="component.animations.type">
-        <option value="{{type}}" ng-repeat="type in ['fade','fadeIn', 'scaleUp','scaleDown', 'scaleUpDown', 'scaleDownUp','slideUp','slideDown','slideLeft','slideRight','flipLeft','shiftUp','shiftDown','shiftLeft','shiftRight']">{{type}}</option>
-    </select>
-</div>
-<div class="row-6">
-    <div class="col-6 col-center activate-all-{{component.animations.type}}" ng-class="{'delay-all': component.animations.delay}" style="overflow:hidden">
-        <div class="page bg-{{color}} content" ng-repeat="color in ['primary','secondary','light','dark']" ng-class="component.animations.page == color ? 'ng-enter' : 'ng-leave'">
-            <h3>Page <small>.theme-{{color}}</small></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, consequatur aliquam <a href="#">corporis</a> quisquam a fuga dolores et deleniti veritatis amet nesciunt eos adipisci illo totam inventore accusantium at aspernatur incidunt.</p>
+<section class="hide">
+    <nav class="horizontal">
+        <ul>
+            <li ng-repeat="page in ['primary','secondary','light','dark']"><a ng-click="component.animations.page = page">{{page}}</a></li>
+        </ul>
+    </nav>
+    <div class="field">
+        <input type="checkbox" name="" id="" ng-model="component.animations.delay" value="1">
+        <label for="">Delay</label>
+    </div>
+    <div class="field">
+        <select name="component.animations.type" ng-model="component.animations.type">
+            <option value="{{type}}" ng-repeat="type in ['fade','fadeIn', 'scaleUp','scaleDown', 'scaleUpDown', 'scaleDownUp','slideUp','slideDown','slideLeft','slideRight','flipLeft','shiftUp','shiftDown','shiftLeft','shiftRight']">{{type}}</option>
+        </select>
+    </div>
+    <div class="row-6">
+        <div class="col-6 col-center activate-all-{{component.animations.type}}" ng-class="{'delay-all': component.animations.delay}" style="overflow:hidden">
+            <div class="page bg-{{color}} content" ng-repeat="color in ['primary','secondary','light','dark']" ng-class="component.animations.page == color ? 'ng-enter' : 'ng-leave'">
+                <h3>Page <small>.theme-{{color}}</small></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, consequatur aliquam <a href="#">corporis</a> quisquam a fuga dolores et deleniti veritatis amet nesciunt eos adipisci illo totam inventore accusantium at aspernatur incidunt.</p>
+            </div>
         </div>
     </div>
-</div>
+</section>
+
+<section class="row-12">
+    <div class="row-6 cols-6 gutter">
+        <div class="pad-large text-bottom bg-primary mode-light foo">
+            <hgroup>
+                <h1 class="uppercase"><span>Nice</span><strong>Lily</strong></h1>
+                <div class="uppercase">Lily likes to play with crayons and pencils</div>
+            </hgroup>
+        </div>
+        <div class="pad-large text-bottom bg-primary mode-light foo">
+            <hgroup>
+                <h1 class="uppercase"><span>Nice</span><strong>Lily</strong></h1>
+                <span class="uppercase">Lily likes to play with crayons and pencils</span>
+            </hgroup>
+        </div>
+    </div>
+</section>
