--- a/scss/modules/animations/_mixins.scss
+++ b/scss/modules/animations/_mixins.scss
@@ -22,7 +22,7 @@
     $fill-mode: default,
     $is-3d: false
 ) {
-    @extend %animation;
+    @extend %animation !optional;
 
     @if $is-3d {
         @extend %animation-3d;
@@ -83,6 +83,48 @@
     }
 }
 
+@mixin animate-on(
+    $selector: false,
+    $name: false,
+    $args...
+) {
+    @include on($self: $selector, $args...) {
+        @include animation($name);
+
+        @content;
+    }
+}
+
+@mixin move-on(
+    $selector: false,
+    $transitions: false,
+    $property: default,
+    $duration: default,
+    $timing-function: default,
+    $delay: default,
+    $extend: true,
+    $args...
+) {
+    @if $extend { @extend %transition; }
+
+    @if $property != default { @include transition-property($property); }
+    @if $duration != default { @include transition-duration($duration); }
+    @if $timing-function != default { @include transition-timing-function($timing-function); }
+    @if $delay != default { @include transition-delay($delay); }
+
+    @each $transition in $transitions {
+        @extend %transition-#{$transition}-inactive !optional;
+    }
+
+    @include on($self: $selector, $args...) {
+        @each $transition in $transitions {
+            @extend %transition-#{$transition}-active !optional;
+        }
+
+        @content;
+    }
+}
+
 @mixin hover-movement($name) {
     @extend %transition-#{$name};
 
@@ -102,14 +144,13 @@
     	@extend %inert;
     }
 
-    &#{$active-selector} {
-    	@extend %animation-#{$active-name}-active !optional;
-    	@extend %active;
+    @include animate-on($active-selector, #{$active-name}-active) {
+        @extend %active;
     }
-    &#{$inactive-selector} {
-    	@extend %animation-#{$inactive-name}-inactive !optional;
-    	@extend %inactive;
-	}
+
+    @include animate-on($inactive-selector, #{$inactive-name}-inactive) {
+        @extend %inactive;
+    }
 }
 
 @mixin activate-hover($settings...) {
@@ -149,47 +190,4 @@
         	@extend %inactive;
         }
     }
-}
-
-@mixin performance($active-selector: '&.active') {
-    $_performance-current-index: -1 !global;
-
-    #{$active-selector} {
-        @content;
-    }
-}
-
-@mixin animate($animation-map) {
-    $_performance-current-index: $_performance-current-index + 1 !global;
-
-    $animation-list: ();
-
-    @if type-of($animation-map) == map {
-        @each $animation-index, $animation-name in $animation-map {
-            $animation-list: append($animation-list, #{$animation-name} #{$performance-beat-duration} ease-in #{$animation-index * $performance-beat-duration}, comma);
-        }
-    }
-
-    @debug $animation-list;
-
-    -webkit-animation: $animation-list;
-    -webkit-animation-fill-mode: forwards;
-}
-
-@mixin then-animate($name) {
-    $_performance-current-index: $_performance-current-index + 1 !global;
-
-    @include animation(
-        $name: $name,
-        $duration: $performance-beat-duration,
-        $delay: $_performance-current-index * $performance-beat-duration
-    );
-}
-
-@mixin and-animate($name) {
-    @include animation(
-        $name: $name,
-        $duration: $performance-beat-duration,
-        $delay: $_performance-current-index * $performance-beat-duration
-    );
 }
