Adding %pseudo-[block, absolute, layer] component; Adding %transition-scaleIn-[inactive, active] component; Started button-pseudo theme (WIP); Large refactor of grid columns/rows for feature parity with fractions (WIP)

--- a/scss/modules/_layout.scss
+++ b/scss/modules/_layout.scss
@@ -144,6 +144,28 @@
     }
 }
 
+%pseudo {
+    content: '';
+
+    &-block {
+        @extend %pseudo;
+        display: block;
+    }
+
+    &-absolute {
+        @extend %pseudo-block;
+        position: absolute;
+    }
+
+    &-layer {
+        @extend %pseudo-absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 %border-box {
     @include box-sizing(border-box);
 }
