--- a/scss/modules/animations/_components.scss
+++ b/scss/modules/animations/_components.scss
@@ -396,6 +396,9 @@
 %transition-slideUp-inactive { transform: translateY(100%); }
 %transition-slideUp-active { transform: translateY(0); }
 
+%transition-scaleIn-inactive { transform: scale(0); }
+%transition-scaleIn-active { transform: scale(1); }
+
 %transition-origin-active {    
     @include transform(translateX(0) translateY(0)); // IE9
     @include transform(translate3d(0, 0, 0));
