--- a/scss/modules/grid/_classes.scss
+++ b/scss/modules/grid/_classes.scss
@@ -29,100 +29,62 @@
 	$suffix: -#{$mq};
 	@if $mq == 'all' { $suffix: ''; }
 
-	@for $i from 0 through $grid-columns {
-		.col-#{$i}#{$suffix}, .column-#{$i}#{$suffix} {
-			@extend %column-#{$i}#{$suffix};
-		}
+	@each $fraction in map-keys($grid-column-fractions) {
+		.col-#{$fraction}#{$suffix} {
+			@extend %column-#{$fraction}#{$suffix};
 
-		.gutter {
-			@extend %columns-gutter#{$suffix};
-
-			> .col-#{$i}#{$suffix} {
-				@extend %column-gutter-#{$i}#{$suffix};
-			}
-
-			> .col-offset-#{$i}#{$suffix} {
-				@extend %column-gutter-offset-#{$i}#{$suffix};
+			.gutter#{$suffix} > & {
+				@extend %column-gutter-#{$fraction}#{$suffix};
 			}
 		}
 
-		.cols-#{$i}#{$suffix}, .columns-#{$i}#{$suffix} {
-			@extend %columns-#{$i}#{$suffix};
+		.cols-#{$fraction}#{$suffix} {
+			@extend %columns-#{$fraction}#{$suffix} !optional;
 
-			&.cols-border, &.columns-border {
-				@extend %columns-#{$i}#{$suffix}-border !optional;
+			&.cols-border#{$suffix} {
+				@extend %columns-#{$fraction}-border#{$suffix} !optional;
 			}
 
 			&.gutter#{$suffix} {
-				@extend %columns-gutter-#{$i}#{$suffix};
+				@extend %columns-gutter-#{$fraction}#{$suffix} !optional;
 			}
 		}
 
-		.col-offset-#{$i}#{$suffix}, .column-offset-#{$i}#{$suffix} {
-			@extend %column-offset-#{$i}#{$suffix};
-		}
-
-		.cols-offset-#{$i}#{$suffix}, .columns-offset-#{$i}#{$suffix} {
-			@extend %columns-offset-#{$i}#{$suffix};
-		}
-
-		.col-push-#{$i}#{$suffix}, .column-push-#{$i}#{$suffix} {
-			@extend %column-push-#{$i}#{$suffix};
-		}
-		
-		.col-pull-#{$i}#{$suffix}, .column-pull-#{$i}#{$suffix} {
-			@extend %column-pull-#{$i}#{$suffix};
-		}
-	}
-
-	@each $fraction in $grid-fractions {
-		.col-#{$fraction}#{$suffix}, .column-#{$fraction}#{$suffix} {
-			@extend %column-#{$fraction}#{$suffix};
-		}
-
-		.cols-#{$fraction}#{$suffix}, .columns-#{$fraction}#{$suffix} {
-			@extend %columns-#{$fraction}#{$suffix};
-		}
-
-		.col-offset-#{$fraction}#{$suffix}, .column-offset-#{$fraction}#{$suffix} {
+		.col-offset-#{$fraction}#{$suffix} {
 			@extend %column-offset-#{$fraction}#{$suffix};
+
+			.gutter#{$suffix} > & {
+				@extend %column-gutter-offset-#{$fraction}#{$suffix};
+			}
 		}
 
-		.cols-offset-#{$fraction}#{$suffix}, .columns-offset-#{$fraction}#{$suffix} {
-			@extend %columns-offset-#{$fraction}#{$suffix};
-		}
-
-		.col-push-#{$fraction}#{$suffix}, .column-push-#{$fraction}#{$suffix} {
+		.col-push-#{$fraction}#{$suffix} {
 			@extend %column-push-#{$fraction}#{$suffix};
 		}
 
-		.col-pull-#{$fraction}#{$suffix}, .column-pull-#{$fraction}#{$suffix} {
+		.col-pull-#{$fraction}#{$suffix} {
 			@extend %column-pull-#{$fraction}#{$suffix};
 		}
 	}
 
-	.col-left {
-		@extend %column-left;
+	.col-left#{$suffix} {
+		@extend %column-left#{$suffix};
 	}
 
-	.col-right {
-		@extend %column-right;
+	.col-right#{$suffix} {
+		@extend %column-right#{$suffix};
 	}
 
-	.col-center {
-		@extend %column-center;
+	.col-center#{$suffix} {
+		@extend %column-center#{$suffix};
 	}
 
-	.col-auto#{$suffix}, .column-auto#{$suffix} {
+	.col-auto#{$suffix} {
 		@extend %column-auto#{$suffix};
 	}
 
-	.cols-auto#{$suffix}, .columns-auto#{$suffix} {
+	.cols-auto#{$suffix} {
 		@extend %columns-auto#{$suffix};
-	}
-
-	.cols-middle#{$suffix}, .columns-middle#{$suffix} {
-		@extend %columns-middle#{$suffix};
 	}
 }
 
@@ -135,54 +97,22 @@
 	$suffix: -#{$mq};
 	@if $mq == 'all' { $suffix: ''; }
 
-	@for $i from 0 through $grid-rows {
-		.row-#{$i}#{$suffix} {
-			@extend %row-#{$i}#{$suffix};
-		}
-
-		.rows-#{$i}#{$suffix} {
-			> * {
-				@extend %rows-#{$i}#{$suffix};
-			}
-
-			&.gutter {
-				@extend %rows-gutter-#{$i}#{$suffix};
-			}
-		}
-
-		// .row-offset-#{$i}#{$suffix} {
-		// 	@extend %row-offset-#{$i}#{$suffix};
-		// }
-
-		// .rows-offset-#{$i}#{$suffix} {
-		// 	@extend %rows-offset-#{$i}#{$suffix};
-		// }
-
-		.row-push-#{$i}#{$suffix} {
-			@extend %row-push-#{$i}#{$suffix};
-		}
-		
-		.row-pull-#{$i}#{$suffix} {
-			@extend %row-pull-#{$i}#{$suffix};
-		}
-
-		.rows-gutter {
-			@extend %rows-gutter#{$suffix};
-
-			> .row-#{$i}#{$suffix} {
-				@extend %row-gutter-#{$i}#{$suffix};
-			}
-		}
-	}
-
-	@each $fraction in $grid-fractions {
+	@each $fraction in map-keys($grid-row-fractions) {
 		.row-#{$fraction}#{$suffix} {
 			@extend %row-#{$fraction}#{$suffix};
+
+			.gutter#{$suffix} > & {
+				@extend %row-gutter-#{$fraction}#{$suffix};
+			}
 		}
 
-		.rows-#{$fraction}#{$suffix} {
-			@extend %rows-#{$fraction}#{$suffix};
-		}
+		// .rows-#{$fraction}#{$suffix} {
+		// 	@extend %rows-#{$fraction}#{$suffix};
+
+		// 	&.gutter#{$suffix} {
+		// 		@extend %rows-gutter-#{$fraction}#{$suffix};
+		// 	}
+		// }
 
 		// .row-offset-#{$fraction}#{$suffix} {
 		// 	@extend %row-offset-#{$fraction}#{$suffix};
