--- a/scss/modules/grid/_module.scss
+++ b/scss/modules/grid/_module.scss
@@ -4,17 +4,37 @@
 
 // Shared Grid Settings
 // TODO: use maps
-$grid-fractions: (half, 3rd, 4th, 5th, 6th, 7th, 8th, 9th);
+
 $grid-content-padding: 1rem !default;
 $grid-content-padding-small: $grid-content-padding / 2 !default;
 $grid-content-padding-large: $grid-content-padding * 2 !default;
 
 // Horizontal Grid Settings
+$grid-column-fractions: (
+    'half': 1/2,
+    '3rd': 1/3,
+    '4th': 1/4,
+    '5th': 1/5,
+    '6th': 1/6,
+    '7th': 1/7,
+    '8th': 1/8,
+    '9th': 1/9
+) !default;
 $grid-columns: 12 !default;
 $grid-column-gutter: 1rem !default;
 $grid-column-mqs: (all, small, medium, large);
 
 // Vertical Grid Settings
+$grid-row-fractions: (
+    'half': 1/2,
+    '3rd': 1/3,
+    '4th': 1/4,
+    '5th': 1/5,
+    '6th': 1/6,
+    '7th': 1/7,
+    '8th': 1/8,
+    '9th': 1/9
+) !default;
 $grid-rows: 12 !default;
 $grid-row-gutter: 1rem !default;
 $grid-row-mqs: (all, short, tall, small);
