--- a/docs/views/animations.html
+++ b/docs/views/animations.html
@@ -27,7 +27,7 @@
 
 <section class="row-12">
     <div class="row-6 cols-6 gutter">
-        <div class="pad-large text-bottom bg-primary mode-light foo">
+        <div class="pad-large text-bottom mode-light foo active">
             <hgroup>
                 <h1 class="uppercase"><span>Nice</span><strong>Lily</strong></h1>
                 <div class="uppercase">Lily likes to play with crayons and pencils</div>
