Refactoring grid gutters (WIP)

--- a/docs/views/forms.html
+++ b/docs/views/forms.html
@@ -4,7 +4,7 @@
 
 <div class="panel">
     <section>
-        <div class="label block position-top-right">Copy</div>
+        <div class="label block position-right-top">Copy</div>
         <h6>Example</h6>
         <div class="field"><label>Email address</label><input type="text" placeholder="Enter email"></div>
         <div class="field">
