--- a/docs/views/grid.html
+++ b/docs/views/grid.html
@@ -2,8 +2,8 @@
 
 <h2>Columns</h2>
 <div class="field button-group buttons-tiny">
-    <input type="radio" name="component.grid.columns.class1" ng-model="component.grid.columns.class1" value="cols-gutter" id="columns.cols_gutter">
-    <label class="button" for="columns.cols_gutter">cols-gutter</label>
+    <input type="radio" name="component.grid.columns.class1" ng-model="component.grid.columns.class1" value="gutter" id="columns.gutter">
+    <label class="button" for="columns.gutter">gutter</label>
     <input type="radio" name="component.grid.columns.class1" ng-model="component.grid.columns.class1" value="" id="columns.default">
     <label class="button" for="columns.default"><em>default</em></label>
 </div>
