--- a/docs/views/layout.html
+++ b/docs/views/layout.html
@@ -106,31 +106,6 @@
                     <span class="subtext">Hi Alex - it's been a while since we've caught up. Up for the usual hike and walk tonight? This is some extremely long text.</span>
                 </div>
             </li>
-<!--             <li class="tile">
-                <div class="tile-item icon"><div class="shape-circle-medium bg-secondary inline"></div></div>
-                <div class="tile-item content">
-                    <div class="col-3 col-12-small">
-                        <span class="strong color-secondary">Social</span>
-                        <span class="subtext">(3)</span>
-                    </div>
-                    <div class="col-9 col-12-small">
-                        <span class="strong">Youtube, Pinterest, Goodreads</span>
-                    </div>
-                </div>
-            </li>
-            <li class="tile">
-                <div class="tile-item icon"><div class="shape-circle-medium bg-light inline"></div></div>
-                <div class="tile-item content">
-                    <div class="col-3 col-12-small">
-                        <span class="">REI Gearmail</span>
-                    </div>
-                    <div class="col-9 col-12-small">
-                        <span class="">Extend Summer's Good Times with Fall Festival Gear - </span>
-                        <span class="subtext">Shop chairs, coolers, speakers, and more with our large inventory selection of blah blah</span>
-                    </div>
-                </div>
-                <div class="tile-item icon"><i class="fa fa-thumbtack"></i></div>
-            </li> -->
             <li>
                 <div class="col-3">
                     <div class="tile-control">
@@ -194,5 +169,8 @@
                 </div>
             </li>
         </ul>
+        <div class="toaster left-bottom mode-light">
+            <div class="toast">Message sent. <a href="#">Undo</a></div>
+        </div>
     </div>
 </section>
