--- a/scss/modules/grid/_mixins.scss
+++ b/scss/modules/grid/_mixins.scss
@@ -51,7 +51,9 @@
 		width: column-width($columns, $gutter: $gutter) !important;
 
 		@if $gutter {
-			margin-right: $gutter;
+			&:not(:last-child) {
+				margin-right: $gutter;
+			}
 		}
 	}
 }
