--- a/scss/modules/notifications/_classes.scss
+++ b/scss/modules/notifications/_classes.scss
@@ -2,7 +2,7 @@
 // Notifications Classes
 // =====================
 
-.toast-queue { @extend %toast-queue; }
+.toaster { @extend %toaster; }
 
 .toast {
     @extend %toast;
